--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "monad-stacker-server",
   "version": "1.0.0",
   "type": "module",
-  "private": true,
+  "engines": { "node": ">=20 <23" },
   "scripts": {
-    "start": "node src/index.js",
     "dev": "node --watch src/index.js",
+    "start": "node src/index.js",
     "register": "node scripts/registerGame.js"
   },
   "dependencies": {
