--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "monad-stacker-server",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
   "engines": { "node": ">=20 <23" },
   "scripts": {
