--- a/client/package.json
+++ b/client/package.json
@@ -5,19 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node ./node_modules/vite/bin/vite.js build",
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@privy-io/react-auth": "^1.82.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@privy-io/react-auth": "^1.82.0",
     "viem": "^2.13.2",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "vite": "^5.4.0",
-    "@vitejs/plugin-react": "^4.3.1"
+    "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^5.4.0"
   },
   "engines": {
     "node": ">=18 <23"
