--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,21 @@
 {
   "name": "monad-stacker-server",
   "version": "1.0.0",
-  "private": true,
   "type": "module",
-  "engines": { "node": ">=20 <23" },
+  "private": true,
   "scripts": {
     "dev": "node --watch src/index.js",
     "start": "node src/index.js",
     "register": "node scripts/registerGame.js"
   },
   "dependencies": {
+    "@upstash/redis": "^1.28.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "uuid": "^9.0.1",
-    "viem": "^2.13.2",
+    "viem": "^2.17.6",
     "zod": "^3.23.8"
   }
 }
